the-broken-apps/pe-assistant-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pe-assistant
  labels:
    app: pe-assistant
